fixed minor pixel bugs on tablet view

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -550,6 +550,13 @@ h1 {
     margin-right: 98px;
     margin-top: 75px;
   }
+  .contact-form {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-columns: 1fr;
+    gap: 20px;
+    margin-top: 36px;
+  }
   .main {
     margin-left: 97px;
     margin-right: 98px;
@@ -559,11 +566,33 @@ h1 {
     margin-right: 137px;
     margin-top: 50px;
   }
-
+  .contact-form button[type="submit"] {
+    width: 152px;
+    height: 48px;
+    border-radius: 48px;
+    border: 1px solid #36536b;
+    color: #36536b;
+    background-color: #edf3f8;
+    margin-top: 7px;
+    font-size: 15px;
+    margin-bottom: 8px;
+    font-family: Public Sans;
+    font-weight: 700;
+    word-wrap: break-word;
+    cursor: pointer;
+  }
+  .custom-checkbox {
+    display: inline-flex;
+    cursor: pointer;
+    align-items: center;
+    margin-top: 2px;
+    margin-bottom: 1px;
+  }
   .join-message-container h4 {
-    margin-top: 65px;
-    margin-left: 120px;
+    margin-top: 60px;
+    margin-left: 119px;
     margin-right: 110px;
+    margin-bottom: 34px;
     color: #36536b;
     font-size: 22px;
     font-family: DM Serif Display;
